infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openproject
  namespace: sdd-${ENV}
spec:
  type: LoadBalancer
  selector:
    app: openproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
